k8s-manifests/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-javdes-service
spec:
  selector:
    app: app-javdes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
